Add new form elements

--- a/index.css
+++ b/index.css
@@ -1,10 +1,49 @@
-h1 {
-    color: red;
+body {
+  padding: 1rem 4rem;
 }
-h1:hover {
-    color: purple;
+
+section>div {
+  width: 80%;
+  margin: 1rem auto;
 }
-#blank {
-    background-color: lightblue;
-    font-size: 100%;
+
+form {
+  margin-top: 50px;
+}
+
+dl {
+  padding: 15px 10px;
+}
+
+dl>li {
+  list-style: none;
+}
+
+dt, dd {
+  display: inline-block;
+  vertical-align: top;
+  width: 48%;
+}
+
+dl:nth-of-type(even) {
+  background-color: WhiteSmoke;
+}
+
+@media (min-width: 700px) {
+  section>div {
+    width: 60%;
+  }
+}
+
+@media (min-width: 900px) {
+  section>div {
+    float: left;
+    margin: 20px 5%;
+    width: 40%;
+  }
+  section::after {
+    clear: both;
+    content: "";
+    display: table;
+  }
 }
